--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-github-calendar": "^4.5.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
